# otfcc

./: .gitignore  .travis.yml  README.md  appveyor.yml  quick.make
rust/: Cargo.toml  README.md  lib.rs
rust/scripts/: Dockerfile  build-crate.sh  compare-roundtrips.js  compare-with-c.sh  filter-compdb.js  fix-float-narrowing.py  gen-compile-commands.sh  make-test-variable-font.py  run-cycles.sh  test-dll.py  test.sh  transpile.sh
rust/src/lib/bk/: bkblock.rs  bkgraph.rs
rust/src/lib/consolidate/: consolidate.rs
rust/src/lib/consolidate/otl/: GDEF.rs  chaining.rs  common.rs  gpos_cursive.rs  gpos_pair.rs  gpos_single.rs  mark.rs  (+4 more)
rust/src/lib/font/: caryll_font.rs  caryll_sfnt.rs  caryll_sfnt_builder.rs
rust/src/lib/json_reader/: json_reader.rs
rust/src/lib/json_writer/: json_writer.rs
rust/src/lib/libcff/: cff_charset.rs  cff_codecs.rs  cff_dict.rs  cff_fdselect.rs  cff_index.rs  cff_opmean.rs  cff_parser.rs  cff_string.rs  charstring_il.rs  subr.rs
rust/src/lib/logger/: logger.rs
rust/src/lib/otf_reader/: otf_reader.rs  unconsolidate.rs
rust/src/lib/otf_writer/: otf_writer.rs  stat.rs
rust/src/lib/support/: alloc.rs  binio.rs  ctype_compat.rs  cvec.rs  glyph_order.rs  handle.rs  options.rs  primitives.rs  stdio.rs
rust/src/lib/table/: BASE.rs  CFF.rs  COLR.rs  CPAL.rs  GDEF.rs  LTSH.rs  OS_2.rs  TSI5.rs  VORG.rs  _TSI.rs  cmap.rs  cvt.rs  fpgm_prep.rs  fvar.rs  hdmx.rs  head.rs  hhea.rs  hmtx.rs  name.rs  post.rs  vhea.rs  vmtx.rs
rust/src/lib/vf/: axis.rs  region.rs  vq.rs
rust/src/src/: otfccbuild.rs  otfccdll.rs  otfccdump.rs  stopwatch.rs
(+169 files in other folders)
